Adding stars in lecastellcanet.html

--- a/lecastellcanet.html
+++ b/lecastellcanet.html
@@ -7,8 +7,10 @@
         <meta property="og:title" content="Renaud MACHECOURT-BOURGEOIS">
         <title>Le Castell Canet | Renaud Machecourt</title>
         <link rel="stylesheet" href="./styles/style_lecastellcanet.css">
+        <link rel="stylesheet" href="./styles/stars.css">
         <link rel="manifest" type="application/manifest+json" href="./resources/icons/icons.webmanifest">
         <link rel="icon" href="./resources/images/logo/" type="image/x-icon">
+        <script src="./stars.js"></script>
     </head>
     <body>
         <div class="header" id="header">
@@ -36,6 +38,13 @@
                 </div>
                     
                 <img src="./resources/images/lecastellcanet.png" alt="">
+                <div class="stars_animation">
+                    <div id="stars"></div>
+                    <div id="stars2"></div>
+                    <div id="stars3"></div>
+
+                    <div id="shooting-star"></div>
+                </div>
             </div>
         </div>
         <main>
