--- a/about-me.html
+++ b/about-me.html
@@ -23,7 +23,7 @@
                         <a href="./index.html">Home</a>
                         <a href="./index.html#projects">Projects</a>
                         <a href="./about-me.html">About Me</a>
-                        <a href="./contact.html">Contact</a>
+                        <a href="./index.html#contacts">Contact</a>
                     </div>
                 </nav>
             </div>
@@ -34,6 +34,7 @@
                     <div class="socials">
                         <a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a>
                         <a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a>
+                        <a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a>
                         <!-- <a href="https://itschocapic.github.io/"><img src="" alt=""></a> -->
                     </div>
                 </div>
@@ -60,9 +61,11 @@
                     <p>I'm passionate about developing interactive and fun experiences, and I'm always looking for new ways to grow as a developer. I've worked with a variety of programming languages, and I'm always ready to learn more. My goal is to continue to develop my skills and contribute to the gaming industry, particularly in the US or Canada, where I aspire to work as a gameplay programmer.</p>
                     <br>
                     <p>Thanks for taking the time to check out my portfolio. I'm excited about the future and look forward to collaborating on innovative and impactful projects in the gaming world!</p>
+
+                    <p class="cv">Curriculum Vitae :<a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a></p>
                 <div class="border"></div>
             </div>
-            <div class="experiences">
+            <div class="experiences" id="curriculum-vitae">
                 <h2>Experiences</h2>
                     <h3>Professional experiences</h3>
                         <h4>Referent Student Residence Blandan - CROUS LYON (September 2024 - April 2025)</h4>
@@ -95,10 +98,11 @@
         </main>
         <footer>
             <div class="contacts">
+                <h2>Contact:</h2>
                 <div class="github"><a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a></div>
                 <div class="linkedin"><a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a></div>
                 <div class="mail"><a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail.png" alt=""></a></div>
-                <div class="curriculum-vitae"><a href="./curriculum-vitae.html">Curriculum Vitae</a></div>
+                <div class="curriculum-vitae"><a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a></div>
             </div>
         </footer>
     </body>
