--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="./index.html">Home</a>
                         <a href="./index.html#projects">Projects</a>
                         <a href="./about-me.html">About Me</a>
-                        <a href="./contact.html">Contact</a>
+                        <a href="./index.html#contacts">Contact</a>
                     </div>
                 </nav>
             </div>
@@ -33,7 +33,8 @@
                     <div class="socials">
                         <a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a>
                         <a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a>
-                        <!-- <a href="https://itschocapic.github.io/"><img src="" alt=""></a> -->
+                        <a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail2.png" alt=""></a>
+                        <a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a>
                     </div>
                 </div>
                     
@@ -58,7 +59,7 @@
                         <div class="skill">Lua</div>
                     </div>
                     <div class="category">
-                        <h3>Game Engine</h3>
+                        <h3>Game Engines</h3>
                         <div class="skill">Unity</div>
                         <div class="skill">Unreal</div>
                         <div class="skill">Godot</div>
@@ -72,6 +73,7 @@
                 </div>
             </div>
             <div class="projects" id="projects">
+                <div class="border"></div>
                 <h2>Selected Projects</h2>
                 <div class="cards-container">
                     <div class="card">
@@ -110,11 +112,11 @@
             </div>
         </main>
         <footer>
-            <div class="contacts">
+            <div class="contacts" id="contacts">
                 <div class="github"><a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a></div>
                 <div class="linkedin"><a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a></div>
-                <div class="mail"><a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail.png" alt=""></a></div>
-                <div class="curriculum-vitae"><a href="./curriculum-vitae.html">Curriculum Vitae</a></div>
+                <div class="mail"><a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail2.png" alt=""></a></div>
+                <div class="curriculum-vitae"><a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a></div>
             </div>
         </footer>
     </body>
