--- a/lecastellcanet.html
+++ b/lecastellcanet.html
@@ -23,7 +23,7 @@
                         <a href="./index.html">Home</a>
                         <a href="./index.html#projects">Projects</a>
                         <a href="./about-me.html">About Me</a>
-                        <a href="./contact.html">Contact</a>
+                        <a href="./index.html#contacts">Contact</a>
                     </div>
                 </nav>
             </div>
@@ -33,7 +33,7 @@
                     <div class="socials">
                         <a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a>
                         <a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a>
-                        <!-- <a href="https://itschocapic.github.io/"><img src="" alt=""></a> -->
+                        <a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a>
                     </div>
                 </div>
                     
@@ -68,7 +68,7 @@
                 <div class="github"><a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a></div>
                 <div class="linkedin"><a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a></div>
                 <div class="mail"><a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail.png" alt=""></a></div>
-                <div class="curriculum-vitae"><a href="./curriculum-vitae.html">Curriculum Vitae</a></div>
+                <div class="curriculum-vitae"><a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a></div>
             </div>
         </footer>
     </body>
