Fix and add footer img in text-header

--- a/about-me.html
+++ b/about-me.html
@@ -34,8 +34,8 @@
                     <div class="socials">
                         <a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a>
                         <a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a>
+                        <a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail.png" alt=""></a>
                         <a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a>
-                        <!-- <a href="https://itschocapic.github.io/"><img src="" alt=""></a> -->
                     </div>
                 </div>
                     
