--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="socials">
                         <a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a>
                         <a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a>
-                        <a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail2.png" alt=""></a>
+                        <a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail.png" alt=""></a>
                         <a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         <h3>W.I.P. Havoc - Unity</h3>
                         <img src="./resources/images/WIP.png" alt="">
                         <p>A 3D fps low poly game</p>
-                        <a href="./havoc.html">See more...</a>
+                        <a href="./index.html#projects">See more...</a>
                         <div class="technologies">
                             <span>C#</span>
                             <span>Unity</span>
@@ -113,9 +113,10 @@
         </main>
         <footer>
             <div class="contacts" id="contacts">
+                <h2>Contact:</h2>
                 <div class="github"><a href="https://github.com/iTschoCapic"><img src="./resources/images/logo/GitHub.png" alt="GitHub Logo"></a></div>
                 <div class="linkedin"><a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="./resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a></div>
-                <div class="mail"><a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail2.png" alt=""></a></div>
+                <div class="mail"><a href="mailto:renaud.mb.58@gmail.com"><img src="./resources/images/logo/Gmail.png" alt=""></a></div>
                 <div class="curriculum-vitae"><a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a></div>
             </div>
         </footer>
