Adding GeoMod page, correcting css in text-header

--- a/about-me.html
+++ b/about-me.html
@@ -21,7 +21,7 @@
                 <nav class="navbar">
                     <div class="onglets">
                         <a href="./index.html">Home</a>
-                        <a href="./index.html#projects">Projects</a>
+                        <a href="./projects.html">Projects</a>
                         <a href="./about-me.html">About Me</a>
                         <a href="./index.html#contacts">Contact</a>
                     </div>
