--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav class="navbar">
                     <div class="onglets">
                         <a href="./index.html">Home</a>
-                        <a href="./index.html#projects">Projects</a>
+                        <a href="./projects.html">Projects</a>
                         <a href="./about-me.html">About Me</a>
                         <a href="./index.html#contacts">Contact</a>
                     </div>
@@ -80,29 +80,30 @@
                         <h3>Le Castell Canet - Website</h3>
                         <img src="./resources/images/lecastellcanet.png" alt="Le Castell Canet">
                         <p>Developed a <b>full-stack website</b> from concept to deployment, handling both front-end and back-end development tasks.</p>
-                        <a href="./lecastellcanet.html">See more...</a>
+                        <a href="./projects/lecastellcanet.html">See more...</a>
                         <div class="technologies">
                             <span>HTML</span>
                             <span>CSS</span>
                             <span>JS</span>
                             <span>FTP</span>
+                            <span>GitHub</span>
                         </div>
                     </div>
                     <div class="card">
                         <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
                         <img src="./resources/images/background.png" alt="3D volumetric representation of a sphere">
                         <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
-                        <a href="./geomod.html">See more...</a>
+                        <a href="./projects/geomod.html">See more...</a>
                         <div class="technologies">
                             <span>C#</span>
                             <span>Unity</span>
                         </div>
                     </div>
                     <div class="card">
-                        <h3>W.I.P. Havoc - Unity</h3>
+                        <h3>Other Projects</h3>
                         <img src="./resources/images/WIP.png" alt="">
-                        <p>A 3D fps low poly game</p>
-                        <a href="./index.html#projects">See more...</a>
+                        <p>Click to see all of my projects</p>
+                        <a href="./projects.html">See more...</a>
                         <div class="technologies">
                             <span>C#</span>
                             <span>Unity</span>
