Added phone version for all pages, also adapted the planetes.css for phone

--- a/projects/geomod.html
+++ b/projects/geomod.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                     
-                <img src="../resources/images/background.png" alt="">
+                <img src="../resources/images/background.png" alt="" class="photo">
                 <div class="planetes_animation">
                     <div id="mercury"></div>
                     <div id="venus"></div>
