--- a/projects/lecastellcanet.html
+++ b/projects/lecastellcanet.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                     
-                <img src="../resources/images/lecastellcanet.png" alt="">
+                <img src="../resources/images/lecastellcanet.png" alt="" class="photo">
                 <div class="stars_animation">
                     <div id="stars"></div>
                     <div id="stars2"></div>
