--- a/about-me.html
+++ b/about-me.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                     
-                <img src="./resources/images/photo.jpg" alt="">
+                <img src="./resources/images/photo.jpg" alt="" class="photo">
                 <div class="stars_animation">
                     <div id="stars"></div>
                     <div id="stars2"></div>
@@ -52,20 +52,20 @@
         <main>
             <div class="me">
                 <h2>About Me</h2>
-                    <p>Hello! I'm Renaud Machecourt-Bourgeois, a passionate and driven game developer with a strong foundation in coding, game design, and a deep love for video games. I've been playing video games since I was 11, and this early interest has evolved into a dedication to creating and shaping the games I've always loved. I started coding at the age of 12, using online resources like openclassrooms.com and YouTube tutorials, and I haven't stopped learning ever since. My journey in tech has been driven by my curiosity and a genuine passion for problem-solving.</p>
+                    <p class="about-me-p">Hello! I'm Renaud Machecourt-Bourgeois, a passionate and driven game developer with a strong foundation in coding, game design, and a deep love for video games. I've been playing video games since I was 11, and this early interest has evolved into a dedication to creating and shaping the games I've always loved. I started coding at the age of 12, using online resources like openclassrooms.com and YouTube tutorials, and I haven't stopped learning ever since. My journey in tech has been driven by my curiosity and a genuine passion for problem-solving.</p>
                     <br>
-                    <p>I'm currently pursuing a Master's degree in game development at the University of Lyon 2 (Master's GAMAGORA), which has given me the opportunity to deepen my technical skills and expand my knowledge of game programming. Along the way, I've gained experience in both front-end and back-end development, as well as in hardware and software, through internships and personal projects. Most recently, I developed a full-stack website during my internship, managing the entire process from start to finish. This hands-on experience reinforced my ability to take on complex challenges and deliver polished results.</p>
+                    <p class="about-me-p">I'm currently pursuing a Master's degree in game development at the University of Lyon 2 (Master's GAMAGORA), which has given me the opportunity to deepen my technical skills and expand my knowledge of game programming. Along the way, I've gained experience in both front-end and back-end development, as well as in hardware and software, through internships and personal projects. Most recently, I developed a full-stack website during my internship, managing the entire process from start to finish. This hands-on experience reinforced my ability to take on complex challenges and deliver polished results.</p>
                     <br>
-                    <p>Beyond coding, I have a wide range of personal interests that influence my work. Music, particularly US pop, is a big part of my life, and I enjoy using it as a source of inspiration for creativity. I'm also an avid fan of board games, with "Belote" being one of my favorites, which I play regularly with friends and family. These hobbies help me approach game development from a unique angle, understanding the importance of engaging, immersive experiences, whether they're in games, music, or social games.</p>
+                    <p class="about-me-p">Beyond coding, I have a wide range of personal interests that influence my work. Music, particularly US pop, is a big part of my life, and I enjoy using it as a source of inspiration for creativity. I'm also an avid fan of board games, with "Belote" being one of my favorites, which I play regularly with friends and family. These hobbies help me approach game development from a unique angle, understanding the importance of engaging, immersive experiences, whether they're in games, music, or social games.</p>
                     <br>
-                    <p>I'm passionate about developing interactive and fun experiences, and I'm always looking for new ways to grow as a developer. I've worked with a variety of programming languages, and I'm always ready to learn more. My goal is to continue to develop my skills and contribute to the gaming industry, particularly in the US or Canada, where I aspire to work as a gameplay programmer.</p>
+                    <p class="about-me-p">I'm passionate about developing interactive and fun experiences, and I'm always looking for new ways to grow as a developer. I've worked with a variety of programming languages, and I'm always ready to learn more. My goal is to continue to develop my skills and contribute to the gaming industry, particularly in the US or Canada, where I aspire to work as a gameplay programmer.</p>
                     <br>
-                    <p>Thanks for taking the time to check out my portfolio. I'm excited about the future and look forward to collaborating on innovative and impactful projects in the gaming world!</p>
+                    <p class="about-me-p">Thanks for taking the time to check out my portfolio. I'm excited about the future and look forward to collaborating on innovative and impactful projects in the gaming world!</p>
 
-                    <p class="cv">Curriculum Vitae :<a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a></p>
+                    <p class="curriculum-vitae">Curriculum Vitae :<a href="./resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="./resources/images/logo/cv2.png" alt=""></a></p>
                 <div class="border"></div>
             </div>
-            <div class="experiences" id="curriculum-vitae">
+            <div class="experiences">
                 <h2>Experiences</h2>
                     <h3>Professional experiences</h3>
                         <h4>Referent Student Residence Blandan - CROUS LYON (September 2024 - April 2025)</h4>
