--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                     
-                <img src="./resources/images/photo.jpg" alt="">
+                <img src="./resources/images/photo.jpg" alt="Portrait of myself" class="photo">
                 <div class="stars_animation">
                     <div id="stars"></div>
                     <div id="stars2"></div>
