hover +3px and smooth transition for text-header, smooth transition for all, <a> for all cards, all cards are aligned vertically on the same point

--- a/projects.html
+++ b/projects.html
@@ -53,71 +53,83 @@
                 <h2>Projects</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <h3>Le Castell Canet - Website</h3>
-                        <img src="./resources/images/lecastellcanet.png" alt="Le Castell Canet">
-                        <p>Developed a <b>full-stack website</b> from concept to deployment, handling both front-end and back-end development tasks.</p>
-                        <a href="./projects/lecastellcanet.html">See more...</a>
-                        <div class="technologies">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>JS</span>
-                            <span>FTP</span>
-                            <span>GitHub</span>
-                        </div>
+                        <a href="./projects/lecastellcanet.html">
+                            <h3>Le Castell Canet - Website</h3>
+                            <img src="./resources/images/lecastellcanet.png" alt="Le Castell Canet">
+                            <p>Developed a <b>full-stack website</b> from concept to deployment, handling both front-end and back-end development tasks.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>JS</span>
+                                <span>FTP</span>
+                                <span>GitHub</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="card">
-                        <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
-                        <img src="./resources/images/background.png" alt="3D volumetric representation of a sphere">
-                        <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
-                        <a href="./projects/geomod.html">See more...</a>
-                        <div class="technologies">
-                            <span>C#</span>
-                            <span>Unity</span>
-                        </div>
+                        <a href="./projects/geomod.html">
+                            <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
+                            <img src="./resources/images/background.png" alt="3D volumetric representation of a sphere">
+                            <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C#</span>
+                                <span>Unity</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="card">
-                        <h3>W.I.P. Havoc - Unity</h3>
-                        <img src="./resources/images/WIP.png" alt="">
-                        <p>A 3D fps low poly game</p>
-                        <a href ="#">See more...</a>
-                        <div class="technologies">
-                            <span>C#</span>
-                            <span>Unity</span>
-                        </div>
+                        <a href ="#">
+                            <h3>W.I.P. Havoc - Unity</h3>
+                            <img src="./resources/images/WIP.png" alt="">
+                            <p>A 3D fps low poly game</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C#</span>
+                                <span>Unity</span>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="card">
-                        <h3>Ubomb - Custom Engine</h3>
-                        <img src="./resources/images/ubomb.png" alt="">
-                        <p>UBomb is a <b>2D video game</b> where the player must rescue a princess from evil green monsters by navigating through various worlds. The player uses bombs to destroy obstacles and enemies, and keys to open locked doors. The game features <b>destructible objects</b>, monsters with <b>increasing difficulty</b>, and <b>collectible items</b> like bombs and keys. The objective is to reach the princess and win the game.</p>
-                        <a href="https://github.com/iTschoCapic/Ubomb">See more...</a>
-                        <div class="technologies">
-                            <span>Java</span>
-                            <span>JavaFX</span>
-                        </div>
+                        <a href="https://github.com/iTschoCapic/Ubomb">
+                            <h3>Ubomb - Custom Engine</h3>
+                            <img src="./resources/images/ubomb.png" alt="">
+                            <p>UBomb is a <b>2D video game</b> where the player must rescue a princess from evil green monsters by navigating through various worlds. The player uses bombs to destroy obstacles and enemies, and keys to open locked doors. The game features <b>destructible objects</b>, monsters with <b>increasing difficulty</b>, and <b>collectible items</b> like bombs and keys. The objective is to reach the princess and win the game.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>Java</span>
+                                <span>JavaFX</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="card">
-                        <h3>AI pathfinding A* & Dijkstra - Unity</h3>
-                        <img src="./resources/images/AI-AStarDijkstra.png" alt="">
-                        <p>The goal of this game is to capture as many tiles on the grid as possible. Two competing algorithms, <b>A* and Dijkstra</b>, alternate turns, each attempting to claim tiles by expanding their paths. A tile can be recaptured by the opponent if it's not currently owned. The challenge lies in <b>strategically navigating the grid</b> to maximize your captured tiles while potentially reclaiming tiles from your competitor. The game tests the <b>efficiency and adaptability</b> of both algorithms in real-time.</p>
-                        <a href="https://github.com/iTschoCapic/IA_pathfinding_AStar_Dijkstra-">See more...</a>
-                        <div class="technologies">
-                            <span>C#</span>
-                            <span>Unity</span>
-                            <span>AI</span>
-                        </div>
+                        <a href="https://github.com/iTschoCapic/IA_pathfinding_AStar_Dijkstra-"></a>
+                            <h3>AI pathfinding A* & Dijkstra - Unity</h3>
+                            <img src="./resources/images/AI-AStarDijkstra.png" alt="">
+                            <p>The goal of this game is to capture as many tiles on the grid as possible. Two competing algorithms, <b>A* and Dijkstra</b>, alternate turns, each attempting to claim tiles by expanding their paths. A tile can be recaptured by the opponent if it's not currently owned. The challenge lies in <b>strategically navigating the grid</b> to maximize your captured tiles while potentially reclaiming tiles from your competitor. The game tests the <b>efficiency and adaptability</b> of both algorithms in real-time.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C#</span>
+                                <span>Unity</span>
+                                <span>AI</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="card">
-                        <h3>LightUp - Custom Engine</h3>
-                        <img src="./resources/images/lightup.png" alt="">
-                        <p>Light Up is a <b>single-player puzzle game</b> in the Simon Tatham's Puzzle Collection. The goal is to <b>illuminate all blank squares</b> on a grid by placing light bulbs on some of them. Each <b>light bulb</b> lights up its square and those in the same row or column unless blocked by black squares. The <b>black squares</b> may be numbered, indicating how many light bulbs must be adjacent to them. The game has four main types of squares: <b>blank, light bulbs, black walls (numbered or not), and marks</b>. The objective is to light all non-black squares, avoid lighting one light by another, and satisfy the number of lights around numbered black squares.</p>
-                        <a href="https://github.com/iTschoCapic/lightup">See more...</a>
-                        <div class="technologies">
-                            <span>C</span>
-                            <span>CMake</span>
-                            <span>SDL</span>
-                            <span>GitHub</span>
-                        </div>
+                        <a href="https://github.com/iTschoCapic/lightup"></a>
+                            <h3>LightUp - Custom Engine</h3>
+                            <img src="./resources/images/lightup.png" alt="">
+                            <p>Light Up is a <b>single-player puzzle game</b> in the Simon Tatham's Puzzle Collection. The goal is to <b>illuminate all blank squares</b> on a grid by placing light bulbs on some of them. Each <b>light bulb</b> lights up its square and those in the same row or column unless blocked by black squares. The <b>black squares</b> may be numbered, indicating how many light bulbs must be adjacent to them. The game has four main types of squares: <b>blank, light bulbs, black walls (numbered or not), and marks</b>. The objective is to light all non-black squares, avoid lighting one light by another, and satisfy the number of lights around numbered black squares.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C</span>
+                                <span>CMake</span>
+                                <span>SDL</span>
+                                <span>GitHub</span>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
