--- a/index.html
+++ b/index.html
@@ -77,37 +77,43 @@
                 <h2>Selected Projects</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <h3>Le Castell Canet - Website</h3>
-                        <img src="./resources/images/lecastellcanet.png" alt="Le Castell Canet">
-                        <p>Developed a <b>full-stack website</b> from concept to deployment, handling both front-end and back-end development tasks.</p>
-                        <a href="./projects/lecastellcanet.html">See more...</a>
-                        <div class="technologies">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>JS</span>
-                            <span>FTP</span>
-                            <span>GitHub</span>
-                        </div>
+                        <a href="./projects/lecastellcanet.html">
+                            <h3>Le Castell Canet - Website</h3>
+                            <img src="./resources/images/lecastellcanet.png" alt="Le Castell Canet">
+                            <p>Developed a <b>full-stack website</b> from concept to deployment, handling both front-end and back-end development tasks.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>JS</span>
+                                <span>FTP</span>
+                                <span>GitHub</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="card">
-                        <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
-                        <img src="./resources/images/background.png" alt="3D volumetric representation of a sphere">
-                        <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
-                        <a href="./projects/geomod.html">See more...</a>
-                        <div class="technologies">
-                            <span>C#</span>
-                            <span>Unity</span>
-                        </div>
+                        <a href="./projects/geomod.html">
+                            <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
+                            <img src="./resources/images/background.png" alt="3D volumetric representation of a sphere">
+                            <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C#</span>
+                                <span>Unity</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="card">
-                        <h3>Other Projects</h3>
-                        <img src="./resources/images/WIP.png" alt="">
-                        <p>Click to see all of my projects</p>
-                        <a href="./projects.html">See more...</a>
-                        <div class="technologies">
-                            <span>C#</span>
-                            <span>Unity</span>
-                        </div>
+                        <a href="./projects.html">
+                            <h3>Other Projects</h3>
+                            <img src="./resources/images/WIP.png" alt="">
+                            <p>Click to see all of my projects</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C#</span>
+                                <span>Unity</span>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
