Added / Updated Projects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Home | Renaud Machecourt</title>
         <link rel="stylesheet" href="./styles/style_index.css">
         <link rel="stylesheet" href="./styles/stars.css">
+        <link rel="stylesheet" href="./styles/whormhole_transition.css">
         <link rel="manifest" type="application/manifest+json" href="./resources/icons/icons.webmanifest">
         <link rel="icon" href="./resources/images/logo/" type="image/x-icon">
         <script src="./stars.js"></script>
@@ -94,7 +95,7 @@
                     <div class="card">
                         <a href="./projects/geomod.html">
                             <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
-                            <img src="./resources/images/background.png" alt="3D volumetric representation of a sphere">
+                            <img src="./resources/images/geomod.png" alt="3D volumetric representation of a sphere">
                             <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
                             <p class="see-more">See more...</p>
                             <div class="technologies">
