--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,48 @@
                 <h2>Projects</h2>
                 <div class="cards-container">
                     <div class="card">
+                        <a href="./projects/npe.html">
+                            <h3>W.I.P. Not Paid Enough - Gamagora Game Show</h3>
+                            <img src="./resources/images/npe.png" alt="Not Paid Enough">
+                            <p>Not Paid Enough is an asymmetrical <b>party game</b> pitting <b>an Alien</b> maintenance man from Area 51 <b>against 3 conspiracy theorists</b> in a frantic race against time.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C#</span>
+                                <span>Unity</span>
+                                <span>Multiplayer</span>
+                                <span>GitHub</span>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="./projects/ecvcproto.html">
+                            <h3>Recycle The Capitalists (VR)</h3>
+                            <img src="./resources/images/lecastellcanet.png" alt="Recycle The Capitalists">
+                            <p>This project provided hands-on experience in <b>VR development</b>, balancing immersive mechanics, aesthetic design, and environmental messaging. It strengthened my problem-solving skills, especially in creating intuitive systems for VR interaction, optimizing visual and audio assets for performance, and designing engaging levels for <b>360° gameplay</b>.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C++</span>
+                                <span>Unreal Engine</span>
+                                <span>VR</span>
+                                <span>GitHub</span>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href ="./projects/idletowersurvivor.html">
+                            <h3>Idle Tower Survivor : Doomsday</h3>
+                            <img src="./resources/images/WIP.png" alt="">
+                            <p>A 3D fps low poly game</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C#</span>
+                                <span>Unity</span>
+                                <span>GitHub</span>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
                         <a href="./projects/lecastellcanet.html">
                             <h3>Le Castell Canet - Website</h3>
                             <img src="./resources/images/lecastellcanet.png" alt="Le Castell Canet">
@@ -70,7 +112,7 @@
                     <div class="card">
                         <a href="./projects/geomod.html">
                             <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
-                            <img src="./resources/images/background.png" alt="3D volumetric representation of a sphere">
+                            <img src="./resources/images/geomod.png" alt="3D volumetric representation of a sphere">
                             <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
                             <p class="see-more">See more...</p>
                             <div class="technologies">
@@ -105,7 +147,7 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="https://github.com/iTschoCapic/IA_pathfinding_AStar_Dijkstra-"></a>
+                        <a href="https://github.com/iTschoCapic/IA_pathfinding_AStar_Dijkstra-">
                             <h3>AI pathfinding A* & Dijkstra - Unity</h3>
                             <img src="./resources/images/AI-AStarDijkstra.png" alt="">
                             <p>The goal of this game is to capture as many tiles on the grid as possible. Two competing algorithms, <b>A* and Dijkstra</b>, alternate turns, each attempting to claim tiles by expanding their paths. A tile can be recaptured by the opponent if it's not currently owned. The challenge lies in <b>strategically navigating the grid</b> to maximize your captured tiles while potentially reclaiming tiles from your competitor. The game tests the <b>efficiency and adaptability</b> of both algorithms in real-time.</p>
@@ -118,7 +160,7 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="https://github.com/iTschoCapic/lightup"></a>
+                        <a href="https://github.com/iTschoCapic/lightup">
                             <h3>LightUp - Custom Engine</h3>
                             <img src="./resources/images/lightup.png" alt="">
                             <p>Light Up is a <b>single-player puzzle game</b> in the Simon Tatham's Puzzle Collection. The goal is to <b>illuminate all blank squares</b> on a grid by placing light bulbs on some of them. Each <b>light bulb</b> lights up its square and those in the same row or column unless blocked by black squares. The <b>black squares</b> may be numbered, indicating how many light bulbs must be adjacent to them. The game has four main types of squares: <b>blank, light bulbs, black walls (numbered or not), and marks</b>. The objective is to light all non-black squares, avoid lighting one light by another, and satisfy the number of lights around numbered black squares.</p>
