--- a/projects/lecastellcanet.html
+++ b/projects/lecastellcanet.html
@@ -16,7 +16,7 @@
         <div class="header" id="header">
             <div class="container">
                 <div class="logo">
-                    <a href="../index.html"><img src="./resources/images/logo/logo.jpg" alt="Logo"></a>
+                    <a href="../index.html"><img src="../resources/images/logo/logo.jpg" alt="Logo"></a>
                 </div>
                 <nav class="navbar">
                     <div class="onglets">
