--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <div class="category">
                         <h3>Tools</h3>
                         <div class="skill">Git</div>
-                        <div class="skill">Docker</div>
                         <div class="skill">VS Code</div>
+                        <div class="skill">Docker</div>
                     </div>
                 </div>
             </div>
@@ -78,23 +78,22 @@
                 <h2>Selected Projects</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <a href="./projects/lecastellcanet.html">
-                            <h3>Le Castell Canet - Website</h3>
-                            <img src="./resources/images/lecastellcanet.png" alt="Le Castell Canet">
-                            <p>Developed a <b>full-stack website</b> from concept to deployment, handling both front-end and back-end development tasks.</p>
+                        <a href="./projects/npe.html">
+                            <h3>W.I.P. Not Paid Enough - Gamagora Game Show</h3>
+                            <img src="./resources/images/npe.png" alt="Not Paid Enough">
+                            <p>Not Paid Enough is an asymmetrical <b>party game</b> pitting <b>an Alien</b> maintenance man from Area 51 <b>against 3 conspiracy theorists</b> in a frantic race against time.</p>
                             <p class="see-more">See more...</p>
                             <div class="technologies">
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>JS</span>
-                                <span>FTP</span>
+                                <span>C#</span>
+                                <span>Unity</span>
+                                <span>Multiplayer</span>
                                 <span>GitHub</span>
                             </div>
                         </a>
                     </div>
                     <div class="card">
                         <a href="./projects/geomod.html">
-                            <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
+                            <h3>Geometrical Modelisation Quadtree - Unity</h3>
                             <img src="./resources/images/geomod.png" alt="3D volumetric representation of a sphere">
                             <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
                             <p class="see-more">See more...</p>
