--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
                     <div class="card">
                         <a href="./projects/ecvcproto.html">
                             <h3>Recycle The Capitalists (VR)</h3>
-                            <img src="./resources/images/lecastellcanet.png" alt="Recycle The Capitalists">
+                            <img src="./resources/images/WIP.png" alt="Recycle The Capitalists">
                             <p>This project provided hands-on experience in <b>VR development</b>, balancing immersive mechanics, aesthetic design, and environmental messaging. It strengthened my problem-solving skills, especially in creating intuitive systems for VR interaction, optimizing visual and audio assets for performance, and designing engaging levels for <b>360° gameplay</b>.</p>
                             <p class="see-more">See more...</p>
                             <div class="technologies">
@@ -83,8 +83,8 @@
                     <div class="card">
                         <a href ="./projects/idletowersurvivor.html">
                             <h3>Idle Tower Survivor : Doomsday</h3>
-                            <img src="./resources/images/WIP.png" alt="">
-                            <p>A 3D fps low poly game</p>
+                            <img src="./resources/images/ITSD_Title.png" alt="">
+                            <p>This project, titled Idle Tower Survivors: Doomsday, was developed as a prototype as part of a duo to blend multiple game genres into a cohesive experience. The goal was to create an engaging game that combines elements of Survivors-like gameplay, Tower Defense mechanics, and Idle-game progression.</p>
                             <p class="see-more">See more...</p>
                             <div class="technologies">
                                 <span>C#</span>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="card">
                         <a href="./projects/geomod.html">
-                            <h3>W.I.P. Geometrical Modelisation Quadtree - Unity</h3>
+                            <h3>Geometrical Modelisation Quadtree - Unity</h3>
                             <img src="./resources/images/geomod.png" alt="3D volumetric representation of a sphere">
                             <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
                             <p class="see-more">See more...</p>
